--- a/style.css
+++ b/style.css
@@ -91,3 +91,11 @@ header h1 {
   font-size: 1.5rem;
   margin: 0;
 }
+
+.container-bootstrap {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
